--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
+  "homepage": "https://ashwinprakashv.github.io/robofriends",
   "private": true,
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
